# nextjs-fastapi-example

./: README.md
.devcontainer/: Dockerfile  devcontainer.json
example-backend/: pyproject.toml
example-backend/src/example_backend/: main.py  schemas.py
example-frontend/: package.json  pnpm-lock.yaml
example-frontend/src/app/: layout.tsx  page.tsx
